# foldervault

./: LICENSE  README.md  factory.json  project.json  pyproject.toml
notes/: devlog.txt  notes.txt
src/foldervault/: foldervault.py  paths.py  util.py  words.py
