[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foldervault"
version = "1.0.0"

authors = [
  { name="Lion Kimbro", email="lionkimbro@gmail.com" },
]

description = "a near infinite vault of folders, identified by UUID"

readme = "README.txt"

requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyperclip",
]

[tools.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/LionKimbro/foldervault"
"Bug Tracker" = "https://github.com/LionKimbro/foldervault/issues"

